<resources>
    <string name="app_name">MAD</string>
    <string name="AddVehicle">Add Vehicle</string>
    <string name="OwnerName">Owner Name</string>
    <string name="TypeNow">Type Now</string>
    <string name="ContactNumber">Contact Number</string>
    <string name="Address">Address</string>
    <string name="Phone">Phone</string>
    <string name="VehicleType">Vehicle Type</string>
    <string name="VehicleModel">Vehicle Model</string>
    <string name="Passengers">Passengers</string>
    <string name="UploadYourVehiclePhoto">Upload Your Vehicle Photo</string>
    <string name="Submit">Submit</string>
    <string name="UpdateVehicleProfile">Update Vehicle Profile</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="VehicleList">Vehicle List</string>
    <string name="VehicleDetails">Vehicle Details</string>
</resources>